Fix white space appearing on the right side of the index.html content
Fixed the issue with white space appearing on the right side of the index.html content, creating a horizontal scroll bar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ img {
 /* ~~~~~~~~~~~~ HERO IMAGE ~~~~~~~~~~~~ */
 
 #hero-wrapper {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     position: relative;
